style(toast): add margin-top to toast so it displays correctly on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@ p-toast {
 }
 
 .p-toast {
+  margin-top: 3rem;
   padding-left: var(--base-x-padding-margin);
   padding-right: var(--base-x-padding-margin);
 }
